--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,7 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "base.html" %}
+{% block title %}
     <title>Home</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-</head>
-<body>
+{% endblock %}
+{% block content %}
     <h1>Hello world!</h1>
-</body>
-<script href="{% static 'js/bootstrap.js' %}></script>
-</html>
+{% endblock %}
