--- a/templates/base.html
+++ b/templates/base.html
@@ -15,5 +15,6 @@
     
     {% endblock %}
 </body>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <script href="{% static 'js/bootstrap.js' %}></script>
 </html>
