--- a/templates/base.html
+++ b/templates/base.html
@@ -16,5 +16,5 @@
     {% endblock %}
 </body>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-<script href="{% static 'js/bootstrap.js' %}></script>
+<script href="{% static 'js/bootstrap.js' %}"></script>
 </html>
