--- a/templates/base.html
+++ b/templates/base.html
@@ -17,4 +17,7 @@
 </body>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <script href="{% static 'js/bootstrap.js' %}"></script>
+{% block script %}
+
+{% endblock %}
 </html>
