Reformat to use boilerplate

--- a/templates/clients/client_index.html
+++ b/templates/clients/client_index.html
@@ -1,14 +1,10 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clients</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}
+<title>Clients</title>
+{% endblock %}
+
+{% block content %}
 <div class="p-3">
     <div>
         {% if create_code == 1 %}
@@ -28,10 +24,8 @@
     </button>
 
     <div class="m-3">
-        <p>This is temporary until login is implemented</p>
-        {% for s in sales %}
             <div class="m-2">
-                <p>Sales: {{ s.username }}</p>
+                <p>Sales: {{ sales }}</p>
                 <table class="table table-striped">
                     <thead>
                     <tr>
@@ -40,7 +34,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    {% for client in s.clients.all %}
+                    {% for client in sales.clients.all %}
                         <tr>
                             <td>{{ client.name }}</td>
                             <td>
@@ -51,7 +45,6 @@
                     </tbody>
                 </table>
             </div>
-        {% endfor %}
     </div>
 </div>
 
@@ -98,8 +91,9 @@
     </div>
 </div>
 
-</body>
-<script href="{% static 'js/bootstrap.js' %}"></script>
+{% endblock %}
+
+{% block script %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
@@ -135,4 +129,4 @@
         });
     }
 </script>
-</html>
+{% endblock %}
