Done implementing product UI

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,61 @@
-{% extends "base.html" %}
+{% extends "base.html" %} {% load static %}
 {% block title %}
-    <title>Home</title>
+<title>Home</title>
 {% endblock %}
+
 {% block content %}
-    <h1>Hello world!</h1>
+{% include 'navbar.html' %}
+<div style="margin: 5vh 5vw">
+  <h4>Products</h4>
+  <hr/>
+  <div class="row">
+    {% for product in products %}
+    <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">{{ product.name }} - {{ product.variant }}</h5>
+          <p class="card-text">Brand: {{ product.brand }}</p>
+          <button id="details-{{ product.id }}" class="btn btn-primary stretched-link btnToView" data-bs-toggle="modal"
+            data-bs-target="#productModal">Details</button>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="productModal" tabindex="-1" aria-labelledby="productModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="productModalLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <table cellspacing="0" cellpadding="0" class="table">
+          <tr>
+            <td>Price</td>
+            <td id="productPrice"></td>
+          </tr>
+          <tr>
+            <td>Brand</td>
+            <td id="productBrand"></td>
+          </tr>
+          <tr>
+            <td>Variant</td>
+            <td id="productVariant"></td>
+          </tr>
+          <tr>
+            <td>Stock</td>
+            <td id="productStock"></td>
+          </tr>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %}
+{% block script %}
+<script type="text/javascript" src="{% static 'js/home.js' %}"></script>
 {% endblock %}
