--- a/templates/clients/client_index.html
+++ b/templates/clients/client_index.html
@@ -1,130 +1,136 @@
 {% extends "base.html" %}
 
 {% block title %}
-<title>Clients</title>
+    <title>Clients</title>
 {% endblock %}
 
 {% block content %}
-<div class="p-3">
-    <div>
-        {% if create_code == 1 %}
-            <div class="alert alert-success" role="alert">
-                Client created successfully
-            </div>
-        {% elif create_code == 0 %}
-            <div class="alert alert-danger" role="alert">
-                Error occurred while creating client
-            </div>
-        {% endif %}
-        This is Clients Index UI
-    </div>
+    {% include 'navbar.html' %}
+    <div class="card m-5">
+        <div class="card-body px-4">
 
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createModal">
-        Add Client
-    </button>
+            <div class="text-center">
+                <h3 id="username">{{ sales }}'s Clients</h3>
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#createModal">
+                    Add Client
+                </button>
+            </div>
 
-    <div class="m-3">
-            <div class="m-2">
-                <p>Sales: {{ sales }}</p>
-                <table class="table table-striped">
-                    <thead>
-                    <tr>
-                        <th>Client Name</th>
-                        <th>Client Information</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for client in sales.clients.all %}
-                        <tr>
-                            <td>{{ client.name }}</td>
-                            <td>
+
+            <div class="my-3 d-flex flex-wrap justify-content-around">
+                {% for client in sales.clients.all %}
+                    <div class="m-2 col-md-3">
+                        <div class="card">
+                            <div class="card-body align-middle text-center">
+                                <h5 class="card-title">{{ client.name }}</h5>
                                 <button class="btn btn-primary detail-button">Details</button>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
             </div>
-    </div>
-</div>
 
-
-<!-- Modal Create Client -->
-<div class="modal fade" id="createModal" tabindex="-1" aria-labelledby="createModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="createModalLabel">Add New Client</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form method="post" action="create-client/" id="client-form">
-                    {% csrf_token %}
-                    <table>
-                        {{ form.as_table }}
-                    </table>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <input type="submit" class="btn btn-primary" form="client-form">
+            <!-- Create Feedback Alert -->
+            <div>
+                {% if create_code == 1 %}
+                    <div class="alert alert-success alert-dismissible" role="alert">
+                        <span>
+                            Client created successfully
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </span>
+                    </div>
+                {% elif create_code == 0 %}
+                    <div class="alert alert-danger alert-dismissible" role="alert">
+                        <span class="align-middle">
+                            Error occurred while creating client
+                            <button type="button" class="btn-close float-end" data-bs-dismiss="alert"
+                                    aria-label="Close"></button>
+                        </span>
+                    </div>
+                {% endif %}
             </div>
         </div>
     </div>
-</div>
 
-<!-- Modal Client Details -->
-<div class="modal fade" id="detailModal" tabindex="-1" aria-labelledby="detailModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="detailModalLabel">Add New Client</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body" id="detail-content">
 
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+    <!-- Modal Create Client -->
+    <div class="modal fade" id="createModal" tabindex="-1" aria-labelledby="createModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="createModalLabel">Add New Client</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form method="post" action="create-client/" id="client-form">
+                        {% csrf_token %}
+                        <table>
+                            {{ form.as_table }}
+                        </table>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <input type="submit" class="btn btn-primary" form="client-form">
+                </div>
             </div>
         </div>
     </div>
-</div>
+
+    <!-- Modal Client Details -->
+    <div class="modal fade" id="detailModal" tabindex="-1" aria-labelledby="detailModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="detailModalLabel"></h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="detail-content">
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
 
 {% block script %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"></script>
+    <script>
+        const detailButtons = document.getElementsByClassName("detail-button");
+        for (let i = 0; i < detailButtons.length; i++) {
+            detailButtons[i].addEventListener("click", function () {
+                const clientName = detailButtons[i].parentElement.children[0].textContent;
+                const salesUsername = document.getElementById("username").textContent.split("'s")[0];
 
-<script>
-    const detailButtons = document.getElementsByClassName("detail-button");
-    for (let i = 0; i < detailButtons.length; i++) {
-        detailButtons[i].addEventListener("click", function () {
-            const clientName = this.parentElement.parentElement.children[0].innerHTML;
-            const salesUsername = this.parentElement.parentElement.parentElement.parentElement.parentElement
-                .children[0].innerHTML.split(":")[1].trim();
+                const request = new XMLHttpRequest();
+                request.open("GET", `details/?client_name=${clientName}&sales_username=${salesUsername}`, true);
+                request.onload = function () {
+                    const data = JSON.parse(this.response);
 
-            const request = new XMLHttpRequest();
-            request.open("GET", `details/?client_name=${clientName}&sales_username=${salesUsername}`, true);
-            request.onload = function () {
-                const data = JSON.parse(this.response);
+                    let content = '';
+                    let title = '';
+                    if (request.status === 200) {
+                        title = clientName;
+                        content = data['information'];
+                    } else {
+                        title = 'Error!';
+                        content = data['error'];
+                    }
 
-                let content = '';
-                let title = '';
-                if (request.status === 200) {
-                    title = clientName;
-                    content = data['information'];
-                } else {
-                    title = 'Error!';
-                    content = data['error'];
+                    document.getElementById("detailModalLabel").innerText = title;
+                    document.getElementById("detail-content").innerText = content;
+                    const detailModal = new bootstrap.Modal(document.getElementById('detailModal'));
+                    detailModal.show();
                 }
-
-                document.getElementById("detailModalLabel").innerHTML = title;
-                document.getElementById("detail-content").innerText = content;
-                const detailModal = new bootstrap.Modal(document.getElementById('detailModal'));
-                detailModal.show();
-            }
-            request.send();
-        });
-    }
-</script>
+                request.send();
+            });
+        }
+    </script>
 {% endblock %}
