--- a/templates/product.html
+++ b/templates/product.html
@@ -13,7 +13,7 @@
                     <th>Product variant:</th>
                     <th>Product price:</th>
                     <th>Product stock:</th>
-                    <th>Status:</th>
+                    <!-- <th>Status:</th> -->
                 </tr>
                 
                 {% for p in products %}
@@ -23,8 +23,13 @@
                     <td>{{ p.variant }}</td>
                     <td>{{ p.price }}</td>
                     <td>{{ p.stock }}</td>
-                    <td style="color:red; font-weight:bold">Not highlighted</td>
-                    <!-- <td><button data-product={{product.id}} data-action="add" class="btn btn-outline-secondary add-btn update-cart">Highlight</button></td> -->
+                    <!-- {% for h in highlight_list  %}
+                        {% if p.name == h.name %}
+                            <td style="color:green; font-weight:bold">Highlighted</td>
+                        {% else %}
+                            <td style="color:red; font-weight:bold">Not highlighted</td>
+                        {% endif %}
+                    {% endfor %} -->
                 </tr>
                 {% endfor %}
             </table>
