Upgrade UI for home and catalog, add search product feature, and add sort product feature

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     
     {% endblock %}
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
 </head>
 <body>
     {% block content %}
