--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,12 +1,39 @@
-{% extends "base.html" %}
+{% extends "base.html" %} {% load static %}
 {% block title %}
 <title>Catalog</title>
+<link rel="stylesheet" href="{% static 'css/catalog.css' %}">
 {% endblock %}
 
 {% block content %}
 {% include 'navbar.html' %}
 <div class="container mt-xl-5">
-    <center><h1 style="margin-bottom:5vh">Product Catalog</h1></center>
+    <center>
+        <h1 style="margin-bottom:5vh">Product Catalog</h1>
+    </center>
+
+    <div class="dropdown d-flex mb-4" style="justify-content: space-between;">
+        <div class="col-md-6">
+            <div class="search">
+                <i class="fa fa-search"></i>
+                <input style="height: 45px !important;" type="text" class="form-control" placeholder="Can't find product? Try search " id="search-box">
+                <button class="btn btn-primary" style="height: 35px !important;" id="search-button">Search</button>
+            </div>
+
+        </div>
+        <div><h4>or</h4></div>
+        <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="sort-button">
+            Sort by: {{ sortby }}
+        </button>
+        <ul class="dropdown-menu">
+            <li><a class="dropdown-item sortBy" id="name-Asc" href="#">Product name A to Z</a></li>
+            <li><a class="dropdown-item sortBy" id="name-Desc" href="#">Product name Z to A</a></li>
+            <li><a class="dropdown-item sortBy" id="brand-Asc" href="#">Brand name A to Z</a></li>
+            <li><a class="dropdown-item sortBy" id="brand-Desc" href="#">Brand name Z to A</a></li>
+            <li><a class="dropdown-item sortBy" id="price-Asc" href="#">Lowest price first</a></li>
+            <li><a class="dropdown-item sortBy" id="price-Desc" href="#">Highest price first</a></li>
+        </ul>
+    </div>
+
     <table class="table table-sm table-bordered">
         <thead>
             <tr>
@@ -20,7 +47,7 @@
         </thead>
 
         <tbody class="table-group-divider">
-        {% for p in products %}
+            {% for p in products %}
             <tr>
                 <td>{{ forloop.counter }}</td>
                 <td>{{ p.name }}</td>
@@ -33,4 +60,8 @@
         </tbody>
     </table>
 </div>
+{% endblock %}
+
+{% block script %}
+<script type="text/javascript" src="{% static 'js/catalog.js' %}"></script>
 {% endblock %}
