add frontend highlight

--- a/templates/create_highlight.html
+++ b/templates/create_highlight.html
@@ -14,11 +14,10 @@
                 </table>
                 <div class="text-left mt-3">
             </form>
-            <!-- <button type="btn btn-primary btn-block" >
-                <a href="{% url 'highlight:show-highlight' %}">Submit</a>
-              </button> -->
                 <button class = "btn btn-primary btn-block">Submit</button>
-            
+            <button type="submit" >
+                <a href="{% url 'highlight:create-highlight' %}">Create Highlight</a>
+            </button>
                 
         </center>
     </div>
