change cookies to session

--- a/templates/account_list.html
+++ b/templates/account_list.html
@@ -2,28 +2,41 @@
 {% block title %}
 <title>Product</title>
 {% endblock %}
-{% block content %}
-    <div class="container mt-xl-5">
-        <center>
 
-            <table class="table table-striped">
-                <tr>
-                    <th>Username:</th>
-                    <th>Email:</th>
-                    <th>Role:</th>
-                </tr>
-                
-                {% for p in list_user %}
-                <tr>
-                    <td>{{ p.full_name }}</td>
-                    <td>{{ p.email }}</td>
-                    <td>{{ p.role }}</td>
-                </tr>
-                {% endfor %}
-            </table>
-            <button type="submit" >
-                <a href="{% url 'account:homepage' %}">Home</a>
-             </button>
-        </center>
-    </div>
+{% block content %}
+    <style>
+            .gradient-custom {
+/* fallback for old browsers */
+    background: #6a11cb;
+
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
+
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
+
+    }
+    </style>
+    <body class="gradient-custom ">
+        <div class="container mt-xl-5">
+        <table class="table table-striped bg-white">
+            <tr>
+                <th>Username:</th>
+                <th>Email:</th>
+                <th>Role:</th>
+            </tr>
+            
+            {% for p in list_user %}
+            <tr>
+                <td>{{ p.full_name }}</td>
+                <td>{{ p.email }}</td>
+                <td>{{ p.role }}</td>
+            </tr>
+            {% endfor %}
+        </table>
+        <button type="submit" >
+            <a href="{% url 'account:homepage' %}">Home</a>
+            </button>
+        </div>
+    </body>
 {% endblock %}
