--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
     {% block title %}
     
     {% endblock %}
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 </head>
 <body>
@@ -15,7 +17,7 @@
     
     {% endblock %}
 </body>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+
 <script href="{% static 'js/bootstrap.js' %}"></script>
 {% block script %}
 
