--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -16,8 +16,27 @@
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
     }
+
+    #role{
+      display: block;
+      max-width: 100%;
+      margin: auto;
+    }
+
+    .confirm{
+      display: block;
+    }
+
+    span{
+      display: block;
+    }
+
+    .question{
+      display: block;
+      margin-top: 10px;
+    }
 </style>
-<section class="vh-100 gradient-custom">
+<body class="vh-100 gradient-custom">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
@@ -26,7 +45,7 @@
   
               <div class="mb-md-5 mt-md-4 pb-5">
   
-                <h2 class="fw-bold mb-2 text-uppercase">Register</h2>
+                <h2 class="fw-bold mb-2 text-uppercase">Create Account</h2>
                 <form action="" method="post">
                     {% csrf_token %}
                     <div class="form-outline form-white mb-4">
@@ -40,22 +59,28 @@
                     </div>
       
                     <div class="form-outline form-white mb-4">
-                      <input type="password" id="typePasswordX" name="password"class="form-control form-control-lg" />
-                      <label class="form-label" for="typePasswordX">Password</label>
+                      <input type="password" id="password" name="password"class="form-control form-control-lg" />
+                      <label class="form-label" for="password">Password</label>
                     </div>
 
                     <div class="form-outline form-white mb-4">
-                      <label class="form-label" for="role">role</label>
-                      <select name="role" id="role">
+                      <input type="password" id="confirm_password" name="confirm_password"class="form-control form-control-lg" />
+                      <label class="form-label" for="confirm_password" id="confirm" name="confirm">Confirm Password</label>
+                      <span id='message' for="confirm"></span>
+                    </div>
+
+                    <div class="form-outline form-white mb-4">
+                      <select name="role" id="role" class="form-control-lg">
                         <option value="SALES">SALES</option>
                         <option value="LOGISTIC OPERATOR">LOGISTIC OPERATOR</option>
                       </select>
+                      <label class="form-label" for="role">Role</label>
                     </div>
         
                     <button class="btn btn-outline-light btn-lg px-5" type="submit">Create</button>
                 </form>
                 <div>
-                  <p class="mb-0">Back to home? <a href="{% url 'account:homepage' %}" class="text-white-50 fw-bold">Home</a>
+                  <p class="mb-0">Want back to home? <a href="{% url 'account:homepage' %}" class="text-white-50 fw-bold">Home</a>
                   </p>
                 </div>
               </div>
@@ -64,5 +89,28 @@
         </div>
       </div>
     </div>
-  </section>
+  </body>
+
+<script>
+    $('#password, #confirm_password').on('keyup', function () {
+    if ($('#password').val().length < 8) {
+      $('#message').html('The password must have a minimum length of 8 characters').css('color', 'red');
+    }
+    else if(!/[a-z]/.test($('#password').val())){
+      $('#message').html('The password must have at least 1 lowercase character').css('color', 'red');
+    }
+    else if(!/[A-Z]/.test($('#password').val())){
+      $('#message').html('The password must have at least 1 uppercase character').css('color', 'red');
+    }
+    else if (!($('#password').val() == $('#confirm_password').val())) {
+      $('#message').html('Password Not Match').css('color', 'red');
+    } 
+    else{
+      $('#message').html('Password Match').css('color', 'green');
+    }
+  });
+  $('#password').on('keyup', function () {
+  
+  });
+</script>
 {% endblock %}
