--- a/templates/register.html
+++ b/templates/register.html
@@ -2,10 +2,12 @@
 
 {% block title %}
 <title>Register</title>
+
 {% endblock %}
 
 {% block content %}
 <style>
+  
     .gradient-custom {
 /* fallback for old browsers */
     background: #6a11cb;
@@ -14,10 +16,24 @@
     background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
 
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
+    background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
+
+    }
+
+    .confirm{
+      display: block;
+    }
+
+    span{
+      display: block;
+    }
+
+    .question{
+      display: block;
+      margin-top: 10px;
     }
 </style>
-<section class="vh-100 gradient-custom">
+<body class="gradient-custom">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
@@ -40,14 +56,20 @@
                     </div>
       
                     <div class="form-outline form-white mb-4">
-                      <input type="password" id="typePasswordX" name="password"class="form-control form-control-lg" />
-                      <label class="form-label" for="typePasswordX">Password</label>
+                      <input type="password" id="password" name="password"class="form-control form-control-lg" />
+                      <label class="form-label" for="password">Password</label>
+                    </div>
+
+                    <div class="form-outline form-white mb-4">
+                      <input type="password" id="confirm_password" name="confirm_password"class="form-control form-control-lg" />
+                      <label class="form-label" for="confirm_password" id="confirm" name="confirm">Confirm Password</label>
+                      <span id='message' for="confirm"></span>
                     </div>
         
                     <button class="btn btn-outline-light btn-lg px-5" type="submit">Sign Up</button>
                 </form>
                 <div>
-                  <p class="mb-0">Already have an account? <a href="{% url 'account:login' %}" class="text-white-50 fw-bold">Login</a>
+                  <p class="mb-0 question">Already have an account? <a href="{% url 'account:login' %}" class="text-white-50 fw-bold">Login</a>
                   </p>
                 </div>
               </div>
@@ -56,5 +78,28 @@
         </div>
       </div>
     </div>
-  </section>
+  </body>
+
+<script>
+  $('#password, #confirm_password').on('keyup', function () {
+  if ($('#password').val().length < 8) {
+    $('#message').html('The password must have a minimum length of 8 characters').css('color', 'red');
+  }
+  else if(!/[a-z]/.test($('#password').val())){
+    $('#message').html('The password must have at least 1 lowercase character').css('color', 'red');
+  }
+  else if(!/[A-Z]/.test($('#password').val())){
+    $('#message').html('The password must have at least 1 uppercase character').css('color', 'red');
+  }
+  else if (!($('#password').val() == $('#confirm_password').val())) {
+    $('#message').html('Password Not Match').css('color', 'red');
+  } 
+  else{
+    $('#message').html('Password Match').css('color', 'green');
+  }
+});
+$('#password').on('keyup', function () {
+
+});
+</script>
 {% endblock %}
