--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -35,8 +35,18 @@
       display: block;
       margin-top: 10px;
     }
-</style>
-<body class="vh-100 gradient-custom">
+    .block-content {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+
+        .gradient-custom{
+            height: 100vh;
+        }
+    </style>
+<div class="block-content">
+    <div class="gradient-custom">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
@@ -89,7 +99,8 @@
         </div>
       </div>
     </div>
-  </body>
+    </div>
+</div>
 
 <script>
     $('#password, #confirm_password').on('keyup', function () {
