add button for admin navbar

--- a/templates/account_list.html
+++ b/templates/account_list.html
@@ -73,7 +73,7 @@
             </div>
         </div>
         <button type="submit" class="btn btn-outline-light btn-lg px-5 bg-dark text-white" style="margin-top: 20px">
-            <a href="{% url 'account:homepage' %}">Home</a>
+            <a href="{% url 'home:homepage' %}">Home</a>
         </button>
     </div>
 </div>
