--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -5,6 +5,8 @@
 {% endblock %}
 
 {% block content %}
+{% include 'navbar.html' %}
+
 <style>
     .gradient-custom {
 /* fallback for old browsers */
