--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
     {% endblock %}
 </body>
 <script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
+<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 {% block script %}
 
 {% endblock %}
